--- a/app/globals.css
+++ b/app/globals.css
@@ -1,21 +1,79 @@
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+html {
+  font-family: var(--font-inter);
+}
+
+h1, h2, h3, h4 {
+  font-family: var(--font-montserrat)
+}
+
+@layer utilities {
+  @keyframes flash {
+    0% {
+      background-position: 200% 0;
+    }
+    100% {
+      background-position: -200% 0;
+    }
   }
+  
+  .btn-flash {
+    @apply bg-gradient-to-r from-blue-400 to-blue-100 text-white font-bold py-2 px-4;
+    background-size: 200% auto;
+    animation: flash 2.2s linear infinite;
+  }  
+  
+  .btn-transparent-flash {
+    @apply bg-gradient-to-r from-transparent to-blue-100 text-white font-bold py-2 px-4;
+    background-size: 200% auto;
+    animation: flash 2.2s linear;
+  }  
+
+
+ .btn-light-blue {
+  @apply bg-blue-600 px-4 py-2 text-white transition-all hover:bg-blue-500 cursor-pointer
+ }
+ .btn-light-transparent {
+  @apply bg-transparent px-4 py-2 text-white transition-all
+ }
+ .btn-blue-transparent {
+  @apply bg-transparent px-8 py-4 text-blue-200 font-bold border-blue-200 border-2 transition-all hover:text-blue-200 hover:border-4
+ }
+ .btn-black-transparent {
+  @apply bg-transparent px-4 py-4 pr-8 text-black font-bold border-black border-2 transition-all hover:text-white hover:border-4 cursor-pointer
+ }
+ .btn-blue {
+  @apply bg-blue-300 px-8 py-4 pr-12 text-black transition-all font-bold hover:border-4 hover:text-white cursor-pointer
+ }
+
+ .btn-link {
+  @apply bg-transparent my-8 text-blue-200 transition-all hover:underline hover:font-bold border-none cursor-pointer
+ }
+ .btn-link-dark {
+  @apply bg-transparent my-8 text-blue-500 transition-all hover:font-bold hover:underline border-none cursor-pointer
+ }
+ .btn-link-black {
+  @apply bg-transparent my-8 text-black transition-all hover:underline hover:font-bold border-none cursor-pointer text-2xl
+ }
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+/* Hide scrollbar for Chrome, Safari and Opera */
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.hide-scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
