--- a/app/globals.css
+++ b/app/globals.css
@@ -13,8 +13,8 @@ html {
   font-family: var(--font-inter);
 }
 
-h1, h2, h3, h4 {
-  font-family: var(--font-montserrat)
+p {
+  font-size: small;
 }
 
 @layer utilities {
